# Diabetes-Hospital-Readmission-Pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
app/: deployment_core.py  requirements.txt  streamlit_app.py
artifacts/: binary_model.joblib  binary_model_metadata.json  multiclass_model.joblib  multiclass_model_metadata.json  sample_batch_payload.json  sample_explain_payload.json  sample_payload.json
docs/: local_workflow.md  release_checklist.md  results_summary.md  troubleshooting.md
reports/: data_dictionary.md  demo_summary.md  feature_engineering_report.md  model_comparison_report.md  monitoring_report.md  monitoring_summary.json  processed_data_report.md  raw_validation_report.md  raw_validation_summary.json
scripts/: build_feature_sets.py  build_processed_data.py  demo_generate_showcase_artifacts.py  demo_prediction_examples.py  demo_smoke_run.py  healthcheck.py  print_tree.py  reset_mlflow_dev_store.py  run_api.py  run_evaluation.py  run_mlflow_server.py  run_monitoring_report.py  run_raw_validation.py  test_streamlit_frontend_logic.py  train_binary.py  train_multiclass.py
src/: __init__.py
tests/: test_api.py  test_data_dictionary.py  test_demo_payloads.py  test_demo_scripts.py  test_evaluate.py  test_feature_engineering.py  test_llm_explain.py  test_model_training.py  test_monitoring_drift.py  test_predict.py  test_preprocess.py  test_raw_loader.py  test_raw_validation.py  test_reset_mlflow_dev_store.py  test_run_mlflow_server.py  test_settings.py  (+6 more)
(+32 files in other folders)
